fix: Increase spacing on last bullet of org card
Fixes #6

--- a/design/src/scss/_aaf.scss
+++ b/design/src/scss/_aaf.scss
@@ -65,6 +65,7 @@ header {
 // Two equal columns
 .columns-2 {
 	column-count: 1;
+	padding-bottom: 2em;
 	@include media-query("sm") {
 		column-count: 2;
 	}
